- Split the Italian navy decisions into a separate category from army decisions;
- Fixed Entente negotiations involving the UK even if they are not in the Entente;
- Various tweaks to Entente negotiations;
- Fixed Italian war score not being checked properly;
- Fixed Austro-Hungarian Civil War;
- Reworked English VPs;
- Added descriptions for more Italian army focuses;
- Tweaked some Italian army focus and decision effects;
- Other unlisted fixes and tweaks;