@@ -5050,7 +5050,7 @@ leader_traits = {
 		random = no
 		sprite = 7
 		experience_gain_army = 0.4
-		breakthrough_factor = -0.1
+		breakthrough_factor = 0.05
 		army_attack_factor = 0.05
 		army_defence_factor = -0.05
 	}
