@@ -786,7 +786,7 @@ ww1_italy.153.a: "So they will support more military funding? Perfect"
 ww1_italy.15.d: "Luzzatti's government fell apart because he did not base political support from any faction in Italy's parliament, but Giolitti is no novice to Italian politics. Already serving 3 terms as prime minister, he knows how to carefully and strategically align and isolate political factions whenever needed. With his 4th mandate secured, he'll need to keep enough support from MP's in Italy's parliament to ensure his governments survival."
 ww1_italy.15.a: "It's what Giolitti does best!"
 ww1_italy.14.t: "The Return of Giolitti"
-ww1_italy.14.d: "Dread it, run from it, destiny arrives all the same. With Luzzatti's weak leadership failing to consolidate a base of support, Luzzatti has resigned rather then be a lame duck. Who will run the next government? Giolitii of course. It was always going to be Giolitii. No other Italian politician has nearly as much influence and support as him. With him easily securing the Prime Minister slot, time will tell how his 4th cabinet ends up."
+ww1_italy.14.d: "Dread it, run from it, destiny arrives all the same. With Luzzatti's weak leadership failing to consolidate a base of support, Luzzatti has resigned rather then be a lame duck. Who will run the next government? Giolitti of course. It was always going to be Giolitti. No other Italian politician has nearly as much influence and support as him. With him easily securing the Prime Minister slot, time will tell how his 4th cabinet ends up."
 ww1_italy.14.a: "He won't have it easy..."
 ww1_italy.13.t: "Breakneck Industrialization"
 ww1_italy.13.d: "It is no secret that our status as a great power lies with the north, not the south. The duchies and republics that made Northern Italy their home were able to consolidate and advance to greater heights because of the relative peace. The predecessor to our nation, Sardinia-Piedmont, is such an example.\n\nThe south has, in contrast, laid in a state of disrepair for over a thousand years, exploited by the Arabs, the French, and the Spaniards. It is a shame to say that our current policies do much of the same.\n\nAll these pieces of history have shaped the way Italy is today: from the top down. The problem is, the wealth never trickles down, it only flows to the north. It is a price we must bear as a nation, yet only one part does so. Our industrial might shall remain concentrated in Turin, Milan, and the Venetian countryside for as long as this remains. It does not look like it will change anytime soon, but that is just another sad story in the annals of the history of our peninsula."
@@ -905,7 +905,7 @@ ww1_italy.32.t: "PSI Party Conference Begins"
 ww1_italy.32.d: "Representatives from the PSI have gathered in a highly anticipated party conference. The party conference comes as the so-called 'maximalist' faction of the PSI has seen a rapid increase in influece in the last few years, and party control is contested greatly this time around. If the maximalists secure controll of the party, it's likely they will withdraw all support from Giolitti's government."
 ww1_italy.32.a: "Well, get on with it now!"
 ww1_italy.52.t: "Maximalists Takeover the PSI"
-ww1_italy.52.d: "The 'Maximalist' faction of the PSI has prevailed at the party convention held recently. Already, the party has started going under dramatic reconstruction. Moderates have been kicked out of the party, with a new moderate socialist party already being formed. Most importantly, and also worryingly, they've denounced cooperation with Giolitti and are encouraging members of the PSI to refuse to work with him. Giolitti's coalition has enjoyed a decent amount of socialist support in the past, and with support from the PSI being pretty much a done deal, Giolitii will have to look towards other coalition partners."
+ww1_italy.52.d: "The 'Maximalist' faction of the PSI has prevailed at the party convention held recently. Already, the party has started going under dramatic reconstruction. Moderates have been kicked out of the party, with a new moderate socialist party already being formed. Most importantly, and also worryingly, they've denounced cooperation with Giolitti and are encouraging members of the PSI to refuse to work with him. Giolitti's coalition has enjoyed a decent amount of socialist support in the past, and with support from the PSI being pretty much a done deal, Giolitti will have to look towards other coalition partners."
 ww1_italy.52.a: "Damn it!"
 ww1_italy.31.t: "Socialists Distrust Giolitti's Suffrage Reform"
 ww1_italy.31.d: "Expansion of suffrage is one of the key talking points amongst socialists, so you can imagine Giolitti's confusion when he started recieving attack from socialists over it. They claim Giolitti must have some sort of alternative motive with the new law, that wants to insult the lower classes by ensuring would not enjoy the prestige and self-fulfillment of electing a government which granted them the right to vote. It's a nonsensical argument, but it's being met with agreement by a suprisingly large amount of socialists. It doesn't make sense. Shouldn't they be grateful?"
