@@ -152,7 +152,7 @@ ITA_nice_offensive: "Nice Offensive"
 ITA_improve_soldier_morale: "Boost Soldier Morale"
 ITA_improve_soldier_morale_desc: "The morale of our soldiers at the frontline is deteriorating due to the terrible conditions in the trenches at the frontlines. We must improve the morale of our soldiers by ordering our commanders to improve the living conditions at the frontline."
 ITA_sack_cadorna: "Sack Cadorna"
-ITA_sack_cadorna_desc: ""
+ITA_sack_cadorna_desc: "Cadorna has proven himself to be an incompetent commander who cannot lead the army. His ruthless strategies have cost us a lot of lives and equipment and have greatly damaged our war effort. He will be relieved from command and replace him with Armando Diaz."
 ITA_an_army_of_trust: "Cultivate an Army of Trust"
 ITA_an_army_of_trust_desc: ""
 ITA_hearten_morale: "Hearten Morale"
@@ -450,11 +450,11 @@ ITA_giolittian_shadow_desc: "Though few in parliament outright hate us, the trut
 ITA_giolitti_era: "Continue the Giolitti Era"
 ITA_giolitti_era_desc: ""
 ITA_daneo_credaro_law: "Daneo-Credaro Law"
-ITA_daneo_credaro_law_desc: "Our education needs to shift to be a more centralized system, for better management of funding in hopes to get a prefeerable result of increased literacy levels and smarter Italian generations."
+ITA_daneo_credaro_law_desc: "To effectively educate our population and increase literacy, our education needs to shift to a more centralized system, for better management of funding. Luigi Credaro and Edoardo Daneo have proposed a new law that will implement many reforms to the school system to help with this."
 ITA_overtures_to_the_psi: "Overtures to the PSI"
 ITA_overtures_to_the_psi_desc: "Governments in the past have attempted to pretend that the socialist party does not exist, a strategy that simply isn't realistic anymore. We should reach out to the PSI and see if we can get their support behind some of our center left agenda."
 ITA_avoid_offensive_policies: "Firm Liberalism"
-ITA_avoid_offensive_policies_desc: "The center left and center right make up the bulk of Italy's parliament. Sure, we may not have the loyalty from them that Giolitti has, but who says we still can't make friends with them. Let's try and secure their firm backing."
+ITA_avoid_offensive_policies_desc: "The center left and center right make up the majority of Italy's parliament. Sure, we may not have the loyalty from them that Giolitti has, but who says we still can't make friends with them. Let's try and secure their firm backing."
 ITA_embrace_nationalism: "Embrace Nationalism"
 ITA_embrace_nationalism_desc: "Italian nationalism has been a burning fire since the days of Napoleon, and its recent revival in support as we look towards expanding our borders gives us great opportunity to co-opt nationalist rhetoric. Through mostly words alone, we can whip up a frenzy of support."
 ITA_friend_of_the_south: "Friend of the South"
@@ -594,7 +594,7 @@ ITA_improve_railway_networks_desc: "Supply is a big problem in the mountainous r
 ITA_expand_reggimento_alpini: "Expand the Reggimento Alpini"
 ITA_expand_reggimento_alpini_desc: "The Reggimento Alpini are the Italian specialized mountaineer divisions trained for combat established in 1872. Expanding it is critical to defend our nation through the mountainous borders we share with potential enemies."
 ITA_prepare_for_a_war_in_the_mountains: "Prepare for a War in the Mountains"
-ITA_prepare_for_a_war_in_the_mountains_desc: "The Italian North is composed of the Alps mountain chain. Fortunately, our potential enemy's borders are also located there, so it makes total sense to adopt better mountaineers."
+ITA_prepare_for_a_war_in_the_mountains_desc: "Our borders in the North are all covered by the Alpine mountains, and if we are to enter a war in Europe it is sure to be the main place we are fighting in. We should prepare our army for the mountainous conditions they will face in that region."
 ITA_finish_the_tagliamento_line: "Finish the Tagliamento Line"
 ITA_finish_the_tagliamento_line_desc: "If the Austrians were to attack us, our first natural line of defense would be the Tagliamento river. There has been some recent fortifications built on the river, but they're not sufficient for a proper defense and must be expanded if we are to make a proper defense."
 ITA_build_forts_on_the_french_border: "Fortify the French Border"
@@ -602,7 +602,7 @@ ITA_build_forts_on_the_french_border_desc: "The French are certainly a much more
 ITA_adopt_the_maxim_gun: "Develop Light Maxim Guns"
 ITA_adopt_the_maxim_gun_desc: "Our guns currently have technology decades behind our neighbors. We need to invest in our own machine guns if we want to catch up with the rest of the world."
 ITA_establish_the_automobile_service: "Establish the Automobile Service"
-ITA_establish_the_automobile_service_desc: "Automobiles are a brilliant civilian product, yet their ability to transer resources from one place to another quickly means they could revolutionize army transportation systems. We should get ahead of the game and invest in this concept heavily."
+ITA_establish_the_automobile_service_desc: "Automobiles are a brilliant invention, being able to quickly bring resources from one place to another over relatively long distances. We should establish a new service in our army made up of automobiles to transport supplies to our army."
 ITA_rain_hellfire: "Rain Hellfire on the Enemy"
 ITA_prioritize_the_defense_of_italy: "Prioritize the Defense of Italy"
 ITA_prioritize_the_defense_of_italy_desc: ""
@@ -1151,7 +1151,7 @@ ITA_utilize_southern_agriculture_for_northern_industry: "Utilize Southern Agricu
 ITA_lombardy_textile_industry: "Invest in Lombardy Textile Industry"
 ITA_invest_in_emilia_electricity: "Invest in Emilia Electricity Industry"
 ITA_government_stability: "Luigi Luzzatti's Government"
-ITA_government_stability_desc: "Signore Luzzati may be strong financier, but is he a strong prime minister? The answer is a resounding no. The opposition? Total lack of willingness to confront. Doing what needs to be done for the sake of the nation? Not if it makes him unpopular, no sir. It is only a matter of time before he falls, and so falls his half-realized ideals. Half-realized is generous, really. "
+ITA_government_stability_desc: "Signore Luzzatti may be strong financier, but is he a strong prime minister? The answer is a resounding no. The opposition? Total lack of willingness to confront. Doing what needs to be done for the sake of the nation? Not if it makes him unpopular, no sir. It is only a matter of time before he falls, and so falls his half-realized ideals. Half-realized is generous, really. "
 ITA_fading_mandate: "Fading Mandate"
 ITA_reforming_the_country: "Reforming and Strengthening the Country"
 ITA_reforming_the_country_desc: "United only half a century ago our nation is one of patchworks and bandaids for problems no-one seems to want to solve. The south remains in the exploited state that it has been under for a millenium and the integration of citizens under the Austrian umbrella has proven quite the challenge. These issues that permeate our relatively new state need to be addressed. In fact, they should have been addressed a decade ago, at the turn of the century, or even five decades ago, on the momentum of the Risorgimento. No matter, the time  remains ripe to transform the nation in order to meet a changing world. \n\nShatter the outdated standards of old! Bring a new industrial revolution to our southern kin! Create an Italy that shall bring its enemies to their knees and fulfill the promise of our nation!"
@@ -1490,15 +1490,15 @@ ITA_sell_gears.tt: "Modify §YIndustrialization Program§! by\n$modifier_product
 ITA_the_center_must_hold: "The Center Must Hold!"
 ITA_gears.tt: "Modify §YIndustrialization Program§! by\n$modifier_production_speed_arms_factory_factor$: §G+5.00%§!\n$MODIFIER_POLITICAL_POWER_COST$: §R+0.05§!"
 ITA_gears2.tt: "Modify §YIndustrialization Program§! by\n$MODIFIER_POLITICAL_POWER_COST$: §R+0.05§!"
-ITA_gears3.tt: "Modify §YIndustrialization Program§! by\n£factory_output_texticon Factory Output: §G+7.50%§!\n$MODIFIER_POLITICAL_POWER_COST$: §R+0.02§!"
+ITA_gears3.tt: "Modify §YIndustrialization Program§! by\n$MODIFIER_INDUSTRIAL_CAPACITY_FACTOR$: §G+7.50%§!\n$MODIFIER_POLITICAL_POWER_COST$: §R+0.02§!"
 ITA_using_gernade_cards.tt: "Modify §YIndustrialization Program§! by\n$MODIFIER_INDUSTRIAL_CAPACITY_FACTOR$: §R-5.00%§!"
 ITA_war_socialism: "Socialist Militancy"
 ITA_aggresive_foreign_policy: "Anti-Imperialist Foreign Policy"
 ITA_second_mobilization_round: "Second Round Of Mobilization"
 ITA_expand_censorship: "Expand Censorship Laws"
 ITA_accept_our_limitations: "Improve Supply Lines"
-ITA_gears33.tt: "Modify §YIndustrialization Program§! by\n£factory_output_texticon Factory Output: §G+7.50%§!"
-ITA_struggle_war.tt: "Modify §YIndustrialization Program§! by\n£factory_output_texticon Factory Output: §R-5.00%§!"
+ITA_gears33.tt: "Modify §YIndustrialization Program§! by\n$MODIFIER_INDUSTRIAL_CAPACITY_FACTOR$: §G+7.50%§!"
+ITA_struggle_war.tt: "Modify §YIndustrialization Program§! by\n$MODIFIER_INDUSTRIAL_CAPACITY_FACTOR$: §R-5.00%§!"
 ITA_the_conductor_and_his_choir_tt: "Modify §YIndustrialization Program§! by\n$MODIFIER_STABILITY_FACTOR$: §G+5.00%§!\n$MODIFIER_INDUSTRY_REPAIR_FACTOR$: §G+15.00%§!\nModify §YFruits of the Reforms§! by\n£construction_speed_texticon Construction Speed: §G+5.00%§!"
 complete_before_1913_now: "If this focus isn't completed, §Rstrikes§! in Northern industries might occur!"
 
@@ -1581,7 +1581,7 @@ ITA_reform_colonial_policy: "Reform our Colonial Policy"
 ITA_reform_colonial_policy_desc: ""
 ITA_reformed_colonial_policy: "Reformed Colonial Policy"
 ITA_agricultural_credit_bank: "National Agricultural Credit Bank"
-ITA_agricultural_credit_bank_desc: "Even though the PSI is less favored in the rural parts of Italy, we can't just ignore them. The farmers are the backbone of our country and we must ensure they are able to sustain it. We can support their efforts and maybe we will be able to become more popular in the rural regions of Italy."
+ITA_agricultural_credit_bank_desc: "Even though the PSI is less favored in the rural parts of Italy, we can't ignore them and their concerns. The farmers are the backbone of our country and we must ensure they are able to provide for themselves and sustain their farms. We can support their efforts by establishing a national agricultural credit bank, and boost the output of agricultural goods in rural Italy."
 ITA_dismantle_potential_business_plots_desc: "It's obvious those pigs in the Confindustria are seeking a collapse of our government. It's suspected they may be up to all sorts of meddling aimed towards discrediting our government with some claiming they may even be planning coup d'état. An investigation into these rumors may help us formulate a proper response."
 ITA_one_step.tt: "We will be one step §GCloser§! towards recieving:\nModify §YSocial Unrest§! by\n$communism_drift$: §R-0.01§!"
 ITA_lib_order.tt: "Once all of these decisions are completed:\nModify §YSocial Unrest§! by\n$communism_drift$: §R-0.01§!"
@@ -1983,7 +1983,7 @@ ITA_left_attempts_new_welfare_laws: "Left Attempts To Pass New Welfare Laws"
 ITA_lobby_against_excessive_government_spending: "Lobby Against Excessive Governmnet Spending"
 ITA_block_reformist_laws: "Block Social Reforms"
 ITA_government_support_of_union: "Government Support of Unions"
-ITA_government_support_of_union_desc: "The unions are close partners of the PSI. letting the people know that these organizations can be trusted will increase the power of unions. Because we align with these unions, it will increase our power."
+ITA_government_support_of_union_desc: "There are many unions across Italy which previous governments have cracked down on and stopped their activity. This is of course not the right course, and we should change our policy to instead actively support unions and their activies as they lead to better working conditions and workers' rights."
 ITA_persecute_union_busting: "Persecute Union Busting"
 ITA_taking_care_of_our_workers: "Taking Care of our Workers"
 ITA_taking_care_of_our_workers_desc: ""
@@ -2327,7 +2327,7 @@ ITA_end_consumerism: "Modify §YSocial Unrest§! by\n$MODIFIER_STABILITY_FACTOR$
 
 ITA_increase_teacher8647: "Modify §YFruits of the Reforms§! by\n$MODIFIER_RESEARCH_SPEED_FACTOR$: §G+7.50%§!\n$MODIFIER_STABILITY_FACTOR$: §R-5.00%§!"
 ITA_democratic_socialism: "Socialism Through Reformism"
-ITA_democratic_socialism_desc: "The Reformist faction within the PSI has gained the upper hand. Even better, they were right to embrace the democratic proces as they are now in charge of Italy. Italy can now enjoy the fruits of socialism without having to worry about losing their freedom."
+ITA_democratic_socialism_desc: "The Reformist faction within the PSI has gained the upper hand. Even better, they were right to embrace the democratic process as they are now in government. We can now enjoy the fruits of socialism without having to worry about losing their freedom."
 ITA_increase_taxes: "Modify §YFruits of the Reforms§! by\n$MODIFIER_CONSUMER_GOODS_FACTOR$: §Y-5.0%§!\n$MODIFIER_POLITICAL_POWER_COST$: §G-0.10§!"
 ITA_increase_taxes_high: "Modify §YFruits of the Reforms§! by\n$MODIFIER_CONSUMER_GOODS_FACTOR$: §Y+10.0%§!\n$MODIFIER_POLITICAL_POWER_COST$: §G-0.15§!"
 
@@ -2662,14 +2662,15 @@ ITA_public_pressure: "Rejuvenated Movement"
 blank: "\n\n"
 ITA_oppose_the_new_right: "Oppose the 'New Right'"
 ITA_sway_economic_experts: "Against Anti-Intellectualism"
+ITA_sway_economic_experts_desc: ""
 ITA_flirt_psi: "Modify §YSocial Unrest§! by\n$MODIFIER_STABILITY_FACTOR$: §G+5.00%§!"
 ITA_ok_labor: "Modify §YSocial Unrest§! by\n$MODIFIER_STABILITY_FACTOR$: §G+5.00%§!\n$MODIFIER_CONSUMER_GOODS_FACTOR$: §Y-5.0%§!"
 ITA_com_it_nat.tt: "Modify §YSocial Unrest§! by\n$MODIFIER_STABILITY_FACTOR$: §R-2.50%§!\n$MODIFIER_WAR_SUPPORT_FACTOR$: §G+7.50%§!"
 ITA_rally_war.tt: "Modify §YSocial Unrest§! by\n$MODIFIER_WAR_SUPPORT_FACTOR$: §G+20.00%§!"
-ITA_fight_for_masculinity.tt: "Modify §YSocial Unrest§! by\n$MODIFIER_WAR_SUPPORT_FACTOR$: §G+5.00%§!\nModify §Y[ITA_army_name_thing]§! by\n$MODIFIER_CONSCRIPTION_TOTAL_FACTOR$: §G+10%§!\n$MODIFIER_MOBILIZATION_SPEED$ §G+10.00%§!\nModify §YIndustrialization Program§! by\n£factory_output_texticon Factory Output: §G+5.00%§!"
-ITA_invite_southern_labourers.tt: "Modify §YIndustrialization Program§! by\n£factory_output_texticon Factory Output: §G+5.00%§!"
-ITA_mass_shell_production.tt: "§YFor 120 Days:§!\n£factory_output_texticon Factory Output: §G+20.00%§!"
-ITA_the_effect.tt: "§YFor 30 Days:§!\n$MODIFIER_CONSUMER_GOODS_FACTOR$: §Y+15.0%§!\n£factory_output_texticon Factory Output: §R-15.00%§!"
+ITA_fight_for_masculinity.tt: "Modify §YSocial Unrest§! by\n$MODIFIER_WAR_SUPPORT_FACTOR$: §G+5.00%§!\nModify §Y[ITA_army_name_thing]§! by\n$MODIFIER_CONSCRIPTION_TOTAL_FACTOR$: §G+10%§!\n$MODIFIER_MOBILIZATION_SPEED$ §G+10.00%§!\nModify §YIndustrialization Program§! by\n$MODIFIER_INDUSTRIAL_CAPACITY_FACTOR$: §G+5.00%§!"
+ITA_invite_southern_labourers.tt: "Modify §YIndustrialization Program§! by\n$MODIFIER_INDUSTRIAL_CAPACITY_FACTOR$: §G+5.00%§!"
+ITA_mass_shell_production.tt: "§YFor 120 Days:§!\n$MODIFIER_INDUSTRIAL_CAPACITY_FACTOR$: §G+20.00%§!"
+ITA_the_effect.tt: "§YFor 30 Days:§!\n$MODIFIER_CONSUMER_GOODS_FACTOR$: §Y+15.0%§!\n$MODIFIER_INDUSTRIAL_CAPACITY_FACTOR$: §R-15.00%§!"
 
 ITA_league_of_revolutionary_action: "League of Revolutionary Action"
 ITA_league_of_revolutionary_action_desc: "Our unique nationalist and syndicalist tendencies have left us will few allies in the socialist sphere. To consolidate support, we must gather prominant left wing nationalists and seek the creation of a new political block, the league of revolutionary action."
