@@ -5,5 +5,6 @@
 - Fixed Austro-Hungarian Civil War;
 - Reworked English VPs;
 - Added descriptions for more Italian army focuses;
+- Many Italian grammar/typo fixes;
 - Tweaked some Italian army focus and decision effects;
 - Other unlisted fixes and tweaks;
